syntax = "proto3";

package oldpackage.v1;

import "google/protobuf/timestamp.proto";
import "oldpackage/v1/types.proto";

option go_package = "github.com/example/oldpackage/v1";

service OldService {
  // GetItem retrieves an item by its ID.
  rpc GetItem(GetItemRequest) returns (GetItemResponse);

  // ListItems retrieves a list of items with pagination.
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
}

// GetItemRequest is the request message for GetItem.
message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message ListItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
}

message Item {
  string id = 1;
  string name = 2;
  Status status = 3; // imported from types.proto
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
